test/end-to-end/compile-errors/type-params-unsupported.crow
main void()
	()

f[t] void() c extern
ex[t] extern
seq[t] alias
	t[]
e[t] enum
f[t] flags
